--- a/src/app/detalles/detalles.component.html
+++ b/src/app/detalles/detalles.component.html
@@ -45,9 +45,9 @@
       <span class="fs-4" style="color: #20CE88">Contraseña: <span class="fs-4 text-white">{{ serie.contrasena
           }}</span></span>
     </div>
-    <!-- <div class="comentarios">
+    <div class="comentarios">
       <span>Comentarios</span>
-    </div> -->
+    </div>
   </div>
 
   <div class="container-fluid text-center mt-5" *ngIf="!serie">
