--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -13,14 +13,39 @@
             </div>
             <input #fileInput type="file" accept="image/*" (change)="seleccionarAvatar($event)" hidden>
         </div>
-        <span class="text-danger d-block mt-2" *ngIf="error">{{ error }}</span>
+        <span class="text-danger d-block mt-2" *ngIf="errorAvatar">{{ errorAvatar }}</span>
 
         <div class="table-responsive mt-4">
             <table class="table table-striped table-bordered m-0 rounded">
                 <tbody>
                     <tr>
                         <th class="text-start p-3" style="font-weight: normal;">Nombre de usuario</th>
-                        <td class="text-start p-3" style="font-weight: normal;">{{ usuario }}</td>
+                        <td class="text-start p-3" style="font-weight: normal;">
+                            <div class="d-flex align-items-center">
+                                <ng-container *ngIf="editandoUsuario; else verUsuario">
+                                    <div class="d-flex flex-column gap-1">
+                                        <div class="d-flex align-items-center">
+                                            <input [(ngModel)]="nuevo_usuario" class="form-control d-inline w-auto me-2" placeholder="Nombre de usuario" />
+                                            <button class="btn btn-success me-2 btn-sm" (click)="guardarUsuario()">
+                                                <i class="fa-solid fa-check"></i>
+                                            </button>
+                                            <button class="btn btn-danger btn-sm" (click)="cancelarEdicion()">
+                                                <i class="fa-solid fa-xmark"></i>
+                                            </button>
+                                        </div>
+                                        <small class="text-danger ms-2" *ngIf="errorUsuario">{{ errorUsuario }}</small>
+                                    </div>
+                                </ng-container>
+                                
+                                <ng-template #verUsuario>
+                                    <span *ngIf="usuario" class="me-2">{{ usuario }}</span>
+                                    <span *ngIf="!usuario" class="me-2 text-muted">Sin nombre de usuario</span>
+                                    <button class="btn btn-primary btn-sm" (click)="editandoUsuario = true">
+                                        <i class="fa-solid" [ngClass]="usuario ? 'fa-pen-to-square' : 'fa-plus'"></i>
+                                    </button>
+                                </ng-template>
+                            </div>
+                        </td>
                     </tr>
                     <tr>
                         <th class="text-start p-3" style="font-weight: normal;">Correo electrónico</th>
@@ -28,8 +53,9 @@
                     </tr>
                     <tr>
                         <th class="text-start p-3" style="font-weight: normal;">Contraseña</th>
-                        <td class="text-start p-3" style="font-weight: normal;"><button
-                                class="btn btn-primary">Actualizar contraseña</button></td>
+                        <td class="text-start p-3" style="font-weight: normal;">
+                            <a class="btn btn-primary" routerLink="/actualizar-password">Actualizar contraseña</a>
+                        </td>
                     </tr>
                 </tbody>
             </table>
