--- a/src/app/recuperar-password/recuperar-password.component.html
+++ b/src/app/recuperar-password/recuperar-password.component.html
@@ -1,1 +1,12 @@
-<p>recuperar-password works!</p>
+<div *ngIf="mensaje" class="text-center bg-success text-white p-2">
+    <span><i class="fa fa-check-circle me-2"></i>{{ mensaje }}</span>
+</div>
+<div class="container-fluid text-center my-5 text-white">
+    <h3 class="fw-bold mb-5">Recuperar contraseña</h3>
+    <form class="justify-content-center mx-auto col-12 col-md-4 col-xl-3" (ngSubmit)="recuperarContrasena()">
+        <input class="form-control" type="email" [(ngModel)]="email" placeholder="Correo electrónico" name="email"
+            required />
+        <button type="submit" class="btn btn-primary w-100 px-4 mt-3">Recuperar contraseña</button>
+        <p *ngIf="error" class="text-danger mt-3">{{ error }}</p>
+    </form>
+</div>
