--- a/src/app/detalles/detalles.component.html
+++ b/src/app/detalles/detalles.component.html
@@ -4,12 +4,13 @@
     <h2 class="fw-bold mt-2 mt-md-3" style="color: yellow;">{{ serie.nombre }}</h2>
     <h3 class="fs-4 fw-bold mt-3" style="color: #20CE88">Sinopsis</h3>
     <span class="col-12 col-md-8 col-lg-7 col-xl-5 mt-2 mx-auto d-block">{{ serie.sinopsis }}</span>
+    
     <h3 class="fs-4 fw-bold mt-4" style="color: #20CE88">Temporadas</h3>
     <div class="d-flex flex-wrap justify-content-center gap-3 mt-3">
       <div class="item overflow-hidden item-link"
         style="width: 240px; height: 358px; object-fit: cover; border: solid 0.1rem #20CE88; position: relative;"
         *ngFor="let temporada of serie.temporadas">
-        <img class="item-img img-fluid rounded" style="width: 100%; height: 100%;" [src]="temporada.imagen"
+        <img class="item-img img-fluid rounded" style="width: 100%; height: 100%;" [src]="temporada.imagen || 'general/default-image.png'"
           alt="Temporada {{ temporada.temporada }}" (error)="temporada.imagen='general/default-image.png'">
         <div
           class="d-flex flex-column justify-content-between align-items-center position-absolute top-0 start-0 w-100 h-100 text-white">
@@ -46,7 +47,7 @@
           }}</span></span>
     </div>
 
-    <div class="col-12 col-md-10 col-lg-8 col-xl-6 mx-auto mt-5">
+    <div class="col-12 col-md-10 col-lg-8 col-xl-6 mx-auto mt-5 mb-3">
       <span class="fs-4 fw-bold mb-3 d-block" style="color: #20CE88">Comentarios</span>
       <div class="d-flex gap-2">
         <img class="rounded-circle" [src]="avatar || 'general/user-default.jpg'" alt="user"
@@ -59,9 +60,9 @@
       </div>
 
       <div class="mt-4 mb-3 d-flex">
-        <span class="fs-5" style="color: #20CE88">Comentarios ({{ comentariosRaiz.length }})</span>
-        <select class="form-select ms-auto w-auto">
-          <option value="masreciente">Más reciente</option>
+        <span style="color: #20CE88; font-weight: 600; font-size: 1.1rem;">Comentarios ({{ comentariosRaiz.length }})</span>
+        <select class="form-select ms-auto w-auto" [(ngModel)]="ordenFecha" (change)="ordenarComentarios()">
+          <option value="reciente">Más reciente</option>
           <option value="antiguo">Más antiguo</option>
         </select>
       </div>
@@ -75,29 +76,66 @@
         <div class="d-flex">
           <img class="rounded-circle me-2" [src]="comentario.perfiles?.avatarUrl || 'general/user-default.jpg'"
             alt="user" style="width: 2rem; height: 2rem;">
-          <div>
-            <div class="d-flex">
+          <div class="w-100">
+            <div class="d-flex align-items-baseline">
               <span class="text-white fw-bold me-2">{{ comentario.perfiles?.usuario || 'Anónimo' }}</span>
-              <span class="text-white opacity-50">{{ comentario.fecha | date: 'short' }}</span>
+              <small class="text-white opacity-50">{{ fechaRelativa(comentario.fecha) }}</small>
             </div>
-            <p class="text-white text-start mt-1 mb-2">{{ comentario.contenido }}</p>
-            <div class="w-100 text-start">
-              <button *ngIf="comentario.respuestas?.length" class="btn btn-sm btn-outline-secondary mb-2"
-                (click)="toggleRespuestas(comentario.id)">
-                {{ comentariosConRespuestasVisibles.has(comentario.id) ? 'Ocultar respuestas' : 'Ver ' +
-                comentario.respuestas.length + ' respuesta(s)' }}
-              </button>
+            <!-- Si no está editando, muestra el contenido normalmente -->
+            <p *ngIf="!comentario.editando" class="text-white text-start my-1">
+              {{ comentario.contenido }}
+            </p>
 
+            <!-- Si está editando, muestra un textarea -->
+            <div *ngIf="comentario.editando" class="my-1 text-end">
+              <textarea [(ngModel)]="comentario.contenidoEditado" rows="3" class="form-control w-100"></textarea>
+              <button class="btn btn-danger btn-sm me-2 mt-2" (click)="cancelarEdicion(comentario)">Cancelar</button>
+              <button class="btn btn-success btn-sm mt-2" (click)="guardarEdicion(comentario)">Guardar</button>
+            </div>
+
+            <div class="w-100 text-start">
+              <div [ngClass]="comentario.respuestas?.length ? 'mb-2' : 'mb-3'">
+                <button class="btn btn-sm border-0 p-0 me-3 text-white opacity-50" (click)="toggleLike(comentario)">
+                  <i class="fa-thumbs-up" [ngClass]="comentario.liked_by_user ? 'fa-solid' : 'fa-regular'"></i> {{ comentario.likes_count || 0 }}
+                </button>
+                <button class="btn btn-sm border-0 p-0 text-white opacity-50 me-3"
+                        (click)="responderA(comentario)">
+                  <i class="fa-solid fa-comment-dots"></i> Responder
+                </button>
+                <button *ngIf="comentario.autor_id === usuarioActualId" class="btn btn-sm border-0 p-0 text-white opacity-50 me-3" (click)="editarComentario(comentario)"><i class="fa-solid fa-pen-to-square"></i> Editar</button>
+                <button *ngIf="comentario.autor_id === usuarioActualId" class="btn btn-sm border-0 p-0 text-white opacity-50" (click)="borrarComentario(comentario.id)"><i class="fa-solid fa-trash-can"></i> Borrar</button>
+
+              </div>
+              <div *ngIf="comentario.id === comentarioAResponder?.id" class="my-2 text-end">
+                <textarea class="form-control form-control-sm w-100"
+                          [(ngModel)]="nuevoComentario"
+                          rows="2"
+                          placeholder="Escribe tu respuesta..."
+                          #inputResponder>
+                </textarea>
+                <div class="mt-2">
+                  <button class="btn btn-danger btn-sm me-2" (click)="cancelarRespuesta()">Cancelar</button>
+                  <button class="btn btn-success btn-sm" (click)="enviarRespuesta()" [disabled]="!nuevoComentario.trim()">Responder</button>
+                </div>
+              </div>
+              
               <div *ngIf="comentariosConRespuestasVisibles.has(comentario.id)" class="">
                 <ng-container *ngFor="let resp of comentario.respuestas">
                   <ng-container *ngTemplateOutlet="renderComentario; context: { $implicit: resp }"></ng-container>
                 </ng-container>
               </div>
+
+              <button *ngIf="comentario.respuestas?.length" class="btn btn-sm border-0 p-0 text-white opacity-50 mb-3"
+                (click)="toggleRespuestas(comentario.id)">
+                {{ comentariosConRespuestasVisibles.has(comentario.id) ? 'Ocultar respuestas' : 'Ver ' +
+                comentario.respuestas.length + ' respuesta(s)' }}
+                <i class="fa-solid ms-1"
+                  [ngClass]="comentariosConRespuestasVisibles.has(comentario.id) ? 'fa-angle-up' : 'fa-angle-down'"></i>
+              </button>
             </div>
           </div>
         </div>
       </ng-template>
-
     </div>
   </div>
 
