--- a/src/app/serie-formulario/serie-formulario.component.html
+++ b/src/app/serie-formulario/serie-formulario.component.html
@@ -1,5 +1,5 @@
 <div id="serie-formulario" class="container mt-4 text-white">
-    <h2 class="text-center mb-4 fw-bold">
+    <h2 class="text-center mb-4 fw-bold" style="color: yellow;">
         {{ modoEdicion ? 'Editar Serie' : 'Nueva Serie' }}
     </h2>
 
@@ -8,8 +8,7 @@
         <div class="col-12 col-md-8 m-auto">
             <img [src]="formulario.get('banner')?.value || '/general/default-image-large.png'"
                 class="img-fluid mx-auto d-block"
-                style="width: 100%; height: auto; object-fit: cover; aspect-ratio: 3/1;" alt=""
-                (error)="bannerError($event)">
+                style="width: 100%; height: auto; object-fit: cover; aspect-ratio: 3/1;" alt="">
             <div class="col-12 col-md-8 mt-3 mx-auto">
                 <input type="text" class="form-control" id="banner" formControlName="banner" placeholder="URL banner">
             </div>
@@ -37,18 +36,18 @@
                     <label class="form-check-label fw-bold" for="activo">Habilitar serie</label>
                 </div>
             </div>
-            <div class="col-12 col-md-4">
+            <div class="col-12 col-md-4 mt-3 mt-md-0">
                 <input type="text" class="form-control" id="portada" formControlName="portada"
                     placeholder="URL portada">
                 <img [src]="formulario.get('portada')?.value || '/general/default-image.png'"
-                    (error)="portadaError($event)" class="img-fluid mx-auto d-block mt-2"
+                    class="img-fluid mx-auto d-block mt-2"
                     style="width: 190px; height: 280px; object-fit: cover;" alt="">
             </div>
         </div>
 
         <!-- Temporadas -->
         <div class="col-12 col-md-10 m-auto text-center mt-5" formArrayName="temporadas">
-            <h3 class="fw-bold">Temporadas</h3>
+            <h4 class="fw-bold" style="color: #20CE88">Temporadas</h4>
             <div class="d-flex flex-wrap justify-content-center gap-2 my-3">
                 <div *ngFor="let temp of temporadas.controls; let i = index" [formGroupName]="i"
                     class="rounded shadow-sm p-3 pb-2"
@@ -62,8 +61,7 @@
                         </div>
                         <div>
                             <img [src]="temp.get('imagen')?.value || '/general/default-image.png'" class="card-img-top"
-                                style="width: 150px; height: 219px; object-fit: cover;" alt=""
-                                (error)="portadaError($event)">
+                                style="width: 150px; height: 219px; object-fit: cover;" alt="" >
                         </div>
                     </div>
                     <button type="button" class="btn btn-danger mt-2" (click)="eliminarTemporada(i)">
@@ -78,7 +76,7 @@
 
         <!-- Peliculas -->
         <div class="col-12 col-md-10 m-auto text-center mt-5" formArrayName="peliculas">
-            <h3 class="fw-bold">Peliculas</h3>
+            <h4 class="fw-bold" style="color: #20CE88">Peliculas</h4>
             <div class="d-flex flex-wrap justify-content-center gap-2 my-3">
                 <div *ngFor="let peli of peliculas.controls; let i = index" [formGroupName]="i"
                     class="rounded shadow-sm p-3 pb-2"
@@ -86,14 +84,13 @@
                     <div class="d-flex justify-content-center gap-3">
                         <div>
                             <input type="text" class="form-control mb-2" formControlName="pelicula"
-                                placeholder="No. pelicula">
+                                placeholder="Pelicula">
                             <input type="text" class="form-control mb-2" formControlName="imagen" placeholder="Portada">
                             <input type="text" class="form-control mb-2" formControlName="link" placeholder="Enlace">
                         </div>
                         <div>
                             <img [src]="peli.get('imagen')?.value || '/general/default-image.png'" class="card-img-top"
-                                style="width: 150px; height: 219px; object-fit: cover;" alt=""
-                                (error)="portadaError($event)">
+                                style="width: 150px; height: 219px; object-fit: cover;" alt="" >
                         </div>
                     </div>
                     <button type="button" class="btn btn-danger mt-2" (click)="eliminarPelicula(i)">
@@ -108,7 +105,7 @@
 
         <!-- Información Técnica -->
         <div class="col-12 col-md-8 m-auto text-center mt-5" formArrayName="informacion_tecnica">
-            <h3 class="fw-bold">Información Técnica</h3>
+            <h4 class="fw-bold" style="color: #20CE88">Temporadas | Información Técnica</h4>
             <div class="d-flex flex-wrap justify-content-center gap-1 my-3">
                 <div *ngFor="let info of informacion_tecnica.controls; let i = index" [formGroupName]="i"
                     class="d-flex justify-content-center align-items-center rounded shadow-sm p-2 gap-2 w-100"
@@ -126,10 +123,31 @@
                 <i class="fa-solid fa-circle-plus"></i> Agregar Info Técnica
             </button>
         </div>
+        
+        <!-- Pelicula Información Técnica -->
+        <div class="col-12 col-md-8 m-auto text-center mt-5" formArrayName="pelicula_informacion_tecnica">
+            <h4 class="fw-bold" style="color: #20CE88">Peliculas | Información Técnica</h4>
+            <div class="d-flex flex-wrap justify-content-center gap-1 my-3">
+                <div *ngFor="let info of pelicula_informacion_tecnica.controls; let i = index" [formGroupName]="i"
+                    class="d-flex justify-content-center align-items-center rounded shadow-sm p-2 gap-2 w-100"
+                    style="width: 340px; background-color: rgba(0, 0, 0, 0.2); border: solid 1px rgb(68, 76, 141);">
+                    <input class="form-control" id="info-{{i}}-atributo" type="text" formControlName="atributo"
+                        placeholder="Atributo">
+                    <input class="form-control" id="info-{{i}}-valor" type="text" formControlName="valor"
+                        placeholder="Valor">
+                    <button type="button" class="btn btn-danger" (click)="eliminarPeliculaInfoTecnica(i)">
+                        <i class="fa-solid fa-trash-can"></i>
+                    </button>
+                </div>
+            </div>
+            <button type="button" class="btn btn-primary" (click)="agregarPeliculaInfoTecnica()">
+                <i class="fa-solid fa-circle-plus"></i> Agregar Info Técnica
+            </button>
+        </div>
 
-        <div class="col-12 col-md-8 m-auto text-center mt-5 mb-4">
-            <button class="btn btn-danger me-2 px-5" (click)="limpiar()">Limpiar</button>
-            <button type="submit" class="btn btn-success px-5">
+        <div class="col-12 col-md-8 m-auto mt-5 mb-4 d-flex gap-2 justify-content-center">
+            <button class="btn btn-danger px-4" (click)="limpiar()">Limpiar</button>
+            <button type="submit" class="btn btn-success px-4">
                 {{ modoEdicion ? 'Guardar Cambios' : 'Agregar Serie' }}
             </button>
         </div>
