--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,5 +1,5 @@
 <div id="inicio">
-  <div id="carouselInicio" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
+  <div id="carouselInicio" class="carousel slide overflow-hidden" data-bs-ride="carousel" data-bs-interval="5000">
     <div class="carousel-indicators">
       <button *ngFor="let serie of series; let i = index" type="button" [attr.data-bs-target]="'#carouselInicio'"
         [attr.data-bs-slide-to]="i" [class.active]="i === 0" [attr.aria-label]="'Slide ' + (i + 1)">
@@ -7,28 +7,40 @@
     </div>
     <div class="carousel-inner">
       <div *ngFor="let serie of series; let i = index" class="carousel-item" [class.active]="i === 0">
-        <img [src]="serie.banner || 'general/default-image-large.png'" [alt]="serie.nombre">
-        <div class="carousel-info">
-          <span class="title">{{ serie.nombre }}</span>
-          <div class="temporadas" *ngIf="serie.temporadas !== null">
-            <span class="label">Temporadas:</span>
-            <div class="valor-container" *ngIf="serie.temporadas.length > 0">
-              <ng-container *ngFor="let temp of serie.temporadas; let i = index">
-                <span *ngIf="i < 12" class="valor">{{ temp.temporada }}</span>
-              </ng-container>
-              <span class="valor extra" *ngIf="serie.temporadas.length > 12">...</span>
+        <img [src]="serie.banner || 'general/default-image-large.png'" [alt]="serie.nombre"
+          class="portada-serie w-100"
+          style="object-fit: cover; object-position: center; filter: brightness(0.4);">
+        <div class="position-absolute w-100 h-100 top-0 d-flex flex-column justify-content-center align-items-center text-light pb-5">
+          <h1 class="title fw-bold col-10 col-md-8 mx-auto text-center" style="color: yellow; letter-spacing: 0.1rem; text-shadow: 2px 2px 5px rgb(0, 0, 0, 0.4);">{{ serie.nombre }}</h1>
+          <div *ngIf="serie.temporadas?.length" class="d-flex rounded py-1 px-2 mt-1 mt-md-3 mx-5 align-items-center" style="background-color: rgb(24, 24, 65);">
+            <span class="temporada fw-bold me-2 ps-1" style="font-weight: 600;">Temporadas:</span>
+            <div class="d-flex flex-wrap gap-1" *ngIf="serie.temporadas.length > 0">
+              <div *ngFor="let temp of serie.temporadas | slice:0:13; let i = index"
+                  class="temp-cont d-flex justify-content-center align-items-center fw-bold rounded-1"
+                  style="background-color: rgb(49, 75, 155);">
+                <span class="temp-valor">
+                  {{ i < 12 ? temp.temporada : '...' }}
+                </span>
+              </div>
             </div>
           </div>
-          <div class="peliculas" *ngIf="serie.peliculas !== null">
-            <span class="label">Películas:</span>
-            <div class="valor-container" *ngIf="serie.peliculas.length > 0">
-              <ng-container *ngFor="let peli of serie.peliculas; let i = index">
-                <span *ngIf="i < 12" class="valor">{{ peli.pelicula }}</span>
-              </ng-container>
-              <span class="valor extra" *ngIf="serie.peliculas.length > 12">...</span>
+          <div *ngIf="serie.peliculas?.length " class="d-flex rounded py-1 px-2 mt-1 mt-md-3 mx-5 align-items-center" style="background-color: rgb(24, 24, 65);">
+            <span class="temporada fw-bold me-2 ps-1" style="font-weight: 600;">Peliculas:</span>
+            <div class="d-flex flex-wrap gap-1" *ngIf="serie.peliculas.length > 0">
+              <div *ngFor="let temp of serie.peliculas | slice:0:13; let i = index"
+                  class="temp-cont d-flex justify-content-center align-items-center fw-bold rounded-1"
+                  style="background-color: rgb(49, 75, 155);">
+                <span class="temp-valor">
+                  {{ i < 12 ? i + 1 : '...' }}
+                </span>
+              </div>
             </div>
           </div>
-          <a class="descargar" [routerLink]="['/series', serie.slug]">DESCARGA AQUI</a>
+          <a class="descargar btn btn-link text-decoration-none px-4 fw-bold rounded-4 fs-5 fs-md-3 mt-3 mt-md-4"
+            style="letter-spacing: 0.2rem; text-shadow: 2px 2px 0 rgb(138, 141, 0); border: solid 0.1rem yellow; padding-top: 0.3rem; padding-bottom: 0.5rem;"
+            [routerLink]="['/series', serie.slug]">
+            DESCARGA AQUI
+          </a>
         </div>
       </div>
     </div>
@@ -42,17 +54,14 @@
     </button>
   </div>
 
-  <!-- Canal -->
-  <div class="canal">
-    <div class="top-content">
-      <span>Canal</span>
-      <img src="general/youtube.png" alt="Canal">
-      <span>Youtube</span>
-    </div>
-    <div class="bottom-content">
-      <img src="general/canal.jpg" alt="Youtube">
-      <a [href]="canalUrl" target="_blank">Luis✪F</a>
-    </div>
+  <div class="d-flex justify-content-center align-items-center mt-5 gap-3 text-light fw-bold fs-2" style="letter-spacing: 0.2rem;">
+    <span>Canal</span>
+    <img src="general/youtube.png" alt="Canal" style="width: auto; height: 2.6rem;">
+    <span>Youtube</span>
+  </div>
+  <div class="d-flex justify-content-center align-items-center mt-4 gap-3 text-light fw-bold fs-2" style="letter-spacing: 0.2rem;">
+    <img src="general/canal.jpg" class="canal rounded-circle me-2" style="border: solid 1px red;" alt="Youtube">
+    <a [href]="canalUrl" target="_blank" class="canal-link text-decoration-none text-light pb-2" style="letter-spacing: 0.4rem; font-style: italic;">Luis✪F</a>
   </div>
 
 </div>
